<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_data_for_fragment_2" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_to_fragment_2" />

    <TextView
        android:id="@+id/receivedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/received_data"
        android:textSize="18sp"/>
</LinearLayout>
