<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <Button
        android:id="@+id/btnFragment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_fragment_1" />

    <Button
        android:id="@+id/btnFragment2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_fragment_2" />

    <Button
        android:id="@+id/btnFragment3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_fragment_3" />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
